--- a/src/Game/style.css
+++ b/src/Game/style.css
@@ -2,6 +2,7 @@
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  background-image: url("./Img/ball.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -10,6 +11,7 @@
 .gamebox {
   width: 100%;
   height: 100%;
+  background-image: url("./Img/background.png");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
